test/bad/unterminated_string.ulm
.text
    nop

.data
    .ascii "
    .ascii "foo"